--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "allowJs": true
+  },  
+  "include": [
+    "src/**/*", "migrations/**/*.js",
+    "test/context.ts"
+ ]
 }
