--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/pg": "^8.11.11",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "node-pg-migrate": "^7.9.1",
     "pg": "^8.14.1",
