--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "create-table": "node-pg-migrate create"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -44,6 +45,7 @@
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.21",
     "validator": "^13.15.0"
@@ -61,6 +63,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
@@ -70,6 +73,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
