--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:integration": "jest --detectOpenHandles --config  jest.integration.config.js",
+    "test:integration": "jest --config  jest.integration.config.js",
     "migrate-up": "node-pg-migrate up",
     "create-table": "node-pg-migrate create"
   },
