--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,14 @@ dist
 
 # Terraform
 .terraform/
-
+intimacykey
+intimacykey.pem
+*.pem
+*.key
+# Ignore key files inside terraform folder
+**/*.pem
+**/*.key
+**/intimacykey.*
+**/intimacykey
+**/*.tfstate
 dovekey*
