--- a/src/infrastructure/terraform/modules/jenkins/bash/Jenkinsfile
+++ b/src/infrastructure/terraform/modules/jenkins/bash/Jenkinsfile
@@ -72,7 +72,8 @@ pipeline{
                         -Dsonar.sources=src \
                         -Dsonar.exclusions=src/infrastructure/**/* \
                         -D.sonar.sourceEncoding=UTF-8 \
-                        -Dsonar.eslint.reportPaths=eslint-report.json 
+                        -Dsonar.eslint.reportPaths=eslint-report.json \
+                        -D.sonar.javascript.lcov.reportPaths=coverage/lcov.info
                     '''
                     // Upload the ESLint report to SonarQube server
                     echo "========SonarQube Analysis executed successfully========"
