add: upload artifact to nexus repo

--- a/src/infrastructure/terraform/modules/jenkins/bash/Jenkinsfile
+++ b/src/infrastructure/terraform/modules/jenkins/bash/Jenkinsfile
@@ -39,6 +39,51 @@ pipeline{
             }
         }
 
+        stage("Build"){
+                    steps{
+                        sh 'npm run build'
+                    }
+                    post{
+                        always{
+                            echo "========always========"
+                        }
+                        success{
+                            echo "======== Build executed successfully========"
+                            echo "========Archiving artifact======="
+                            //archiveArtifacts artifacts: 'dist/**', fingerprint: true
+                        }
+                        failure{
+                            echo "========Build execution failed========"
+                        }
+                    }
+        }
+
+         stage('Archive Artifact') {
+            steps {
+                sh 'tar -czf dist.tar.gz dist' // or use zip if needed
+                archiveArtifacts artifacts: 'dist.tar.gz', fingerprint: true
+            }
+        }
+
+        stage("Unit Tests"){
+            steps{
+                catchError(buildResult: 'UNSTABLE', stageResult: 'FAILURE') {
+                   sh 'npm run test'
+                   sh 'npm run test:cov'
+                }
+               
+            }
+            post{
+    
+                success{
+                    echo "========Unit Tests executed successfully========"
+                }
+                failure{
+                    echo "========B execution failed========"
+                }
+            }
+        }
+
         stage("Checkstyle Analysis"){
             steps{
                 catchError(buildResult: 'UNSTABLE', stageResult: 'FAILURE') {
@@ -58,6 +103,7 @@ pipeline{
                 }
             }
         }
+
         stage('SonarQube Analysis') {
             environment {
                 SONARQUBE_SCANNER_HOME = tool 'sonar7.1' // Ensure you have configured SonarQube scanner in Jenkins
@@ -68,52 +114,47 @@ pipeline{
                         ${SONARQUBE_SCANNER_HOME}/bin/sonar-scanner \
                         -Dsonar.projectKey=intimacy-back-v2 \
                         -Dsonar.projectName="Intimacy Backend" \
-                        -D.sonar.projectVersion=1.0 \
+                        -Dsonar.projectVersion=1.0 \
                         -Dsonar.sources=src \
                         -Dsonar.exclusions=src/infrastructure/**/* \
-                        -D.sonar.sourceEncoding=UTF-8 \
+                        -Dsonar.sourceEncoding=UTF-8 \
                         -Dsonar.eslint.reportPaths=eslint-report.json \
-                        -D.sonar.javascript.lcov.reportPaths=coverage/lcov.info
+                        -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
                     '''
                     // Upload the ESLint report to SonarQube server
                     echo "========SonarQube Analysis executed successfully========"
                 }
             }
         }
-        stage("Unit Tests"){
-            steps{
-                catchError(buildResult: 'UNSTABLE', stageResult: 'FAILURE') {
-                   sh 'npm run test:cov'
-                }
-               
-            }
-            post{
-    
-                success{
-                    echo "========Unit Tests executed successfully========"
-                }
-                failure{
-                    echo "========B execution failed========"
-                }
+        
+        stage("Quality Gate") {
+            steps {
+              timeout(time: 1, unit: 'HOURS') {
+                waitForQualityGate abortPipeline: true
+              }
+                 //jenkins-ci-webhook
             }
         }
-        stage("Build"){
-            steps{
-                sh 'npm run build'
-            }
-            post{
-                always{
-                    echo "========always========"
-                }
-                success{
-                    echo "======== Build executed successfully========"
-                    echo "========Archiving artifact======="
-                    archiveArtifacts artifacts: 'dist/**', fingerprint: true
-                }
-                failure{
-                    echo "========Build execution failed========"
-                }
+
+        stage("Upload to Nexus") {
+            steps {
+                nexusArtifactUploader(
+                    nexusVersion: 'nexus3',
+                    protocol: 'http',
+                    nexusUrl: '172.31.4.90:8081',
+                    groupId: 'QA',
+                    version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
+                    repository: 'intimacy-backend-repository',
+                    credentialsId: 'nexuslogin',
+                    artifacts: [[
+                        artifactId: 'intimacyapp',
+                        classifier: '',
+                        file: 'dist.tar.gz',     // Matches the archived file
+                        type: 'tgz'              // tgz = tar + gzip = .tar.gz
+                    ]]
+                )
             }
         }
+
     }
 }
