moved Jenkis file to top level

--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -6,11 +6,10 @@ pipeline{
         jdk 'JDK17'
     }
     environment {
-        registryCredentials = "eu-west-3:awscreds"
+        registryCredentials = 'ecr:eu-west-3:awscreds'
         imageName = "961341553126.dkr.ecr.eu-west-3.amazonaws.com/intimacy-repository"
-        intimacyRegistry = "https:961341553126.dkr.ecr.eu-west-3.amazonaws.com"
+        intimacyRegistry = "https://961341553126.dkr.ecr.eu-west-3.amazonaws.com"
     }
-
     stages{
         stage("Fetch code"){
             steps{
