copy other pipeline jenkinsfile

--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -78,16 +78,21 @@ pipeline{
             }
         }
 
-        stage("Unit Tests") {
-            steps {
-                script {
-                    try {
-                        sh 'npm run test'
-                        sh 'npm run test:cov'
-                    } catch (e) {
-                        echo "Test command failed with: ${e}"
-                        currentBuild.result = 'UNSTABLE'
-                    }
+        stage("Unit Tests"){
+            steps{
+                catchError(buildResult: 'UNSTABLE', stageResult: 'FAILURE') {
+                   sh 'npm run test'
+                   sh 'npm run test:cov'
+                }
+               
+            }
+            post{
+    
+                success{
+                    echo "========Unit Tests executed successfully========"
+                }
+                failure{
+                    echo "========B execution failed========"
                 }
             }
         }
@@ -129,7 +134,7 @@ pipeline{
                         -Dsonar.eslint.reportPaths=eslint-report.json \
                         -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
                     '''
-                    
+                    // Upload the ESLint report to SonarQube server
                     echo "========SonarQube Analysis executed successfully========"
                 }
             }
