--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -172,8 +172,7 @@ pipeline{
         stage('Build Docker Image') {
             steps {
                 script {
-                  
-                    dockerImage = docker.build(imageName + ":$BUILD_NUMBER", ".")
+                    dockerImage = docker.build("${imageName}-backend:$BUILD_NUMBER", ".")
                 }
             }
         }
@@ -182,8 +181,8 @@ pipeline{
             steps{
                 script{
                     docker.withRegistry(intimacyRegistry, registryCredentials) {
-                        dockerImage.push("$BUILD_NUMBER")
-                        dockerImage.push("latest")
+                      dockerImage.push("$BUILD_NUMBER")
+                      dockerImage.push("latest")
                     }
                 }
             }
