--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -45,30 +45,22 @@ pipeline{
         }
 
         stage("Build"){
-                    steps{
-                                            script {
-                        try {
-                            sh 'npm install'
-                        } catch (err) {
-                            echo "Install failed: ${err}"
-                            error("Stopping pipeline due to install failure")
-                        }
-                        }
-                        
-                    }
-                    post{
-                        always{
-                            echo "========always========"
-                        }
-                        success{
-                            echo "======== Build executed successfully========"
-                            echo "========Archiving artifact======="
-                            archiveArtifacts artifacts: 'dist/**', fingerprint: true
-                        }
-                        failure{
-                            echo "========Build execution failed========"
-                        }
-                    }
+            steps{
+                script { sh 'npm run build'}
+            }
+            post{
+                always{
+                    echo "========always========"
+                }
+                success{
+                    echo "======== Build executed successfully========"
+                    echo "========Archiving artifact======="
+                    archiveArtifacts artifacts: 'dist/**', fingerprint: true
+                }
+                failure{
+                    echo "========Build execution failed========"
+                }
+            }
         }
 
          stage('Archive Artifact') {
@@ -114,58 +106,6 @@ pipeline{
                 failure{
                     echo "========checkstyle execution failed========"
                 }
-            }
-        }
-
-        stage('SonarQube Analysis') {
-            environment {
-                SONARQUBE_SCANNER_HOME = tool 'sonar7.1' 
-            }
-            steps {
-                withSonarQubeEnv('sonarserver') { 
-                    sh '''
-                        ${SONARQUBE_SCANNER_HOME}/bin/sonar-scanner \
-                        -Dsonar.projectKey=intimacy-back-v2 \
-                        -Dsonar.projectName="Intimacy Backend" \
-                        -Dsonar.projectVersion=1.0 \
-                        -Dsonar.sources=src \
-                        -Dsonar.exclusions=src/infrastructure/**/* \
-                        -Dsonar.sourceEncoding=UTF-8 \
-                        -Dsonar.eslint.reportPaths=eslint-report.json \
-                        -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-                    '''
-                    
-                    echo "========SonarQube Analysis executed successfully========"
-                }
-            }
-        }
-        
-        stage("Quality Gate") {
-            steps {
-              timeout(time: 1, unit: 'HOURS') {
-                waitForQualityGate abortPipeline: true
-              }
-                 //jenkins-ci-webhook
-            }
-        }
-
-        stage("Upload to Nexus") {
-            steps {
-                nexusArtifactUploader(
-                    nexusVersion: 'nexus3',
-                    protocol: 'http',
-                    nexusUrl: '172.31.4.90:8081',
-                    groupId: 'QA',
-                    version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
-                    repository: 'intimacy-backend-repository',
-                    credentialsId: 'nexuslogin',
-                    artifacts: [[
-                        artifactId: 'intimacyapp',
-                        classifier: '',
-                        file: 'dist.tar.gz',     // Matches the archived file
-                        type: 'tgz'              // tgz = tar + gzip = .tar.gz
-                    ]]
-                )
             }
         }
 
