--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -110,7 +110,7 @@ pipeline{
         }
 
         stage("Deploy ro Cluster"){
-            stages {
+            steps {
                 script {
                     sh 'pwd'
                 }
