correct: bug in jenkinsfile

--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -129,7 +129,7 @@ pipeline{
         }
 
         stage("Deploy to Cluster"){
-            stages {
+            steps {
                 script {
                     sh 'pwd'
                 }
