add: rollout stage

--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -132,6 +132,7 @@ pipeline{
             steps {
                 script {
                     sh 'pwd'
+                    sh 'kubectl rollout restart deployment intimacy-client'
                 }
             }
         }
