--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -93,49 +93,46 @@ pipeline{
             }
         }
  */
-       stage('e2e test') {
+        stage("e2e test") {
             steps {
                 script {
-                echo '🛠 Step 1: Create PostgreSQL container'
-                sh '''
-                    docker run --rm -d \
-                    --name intimacy-test-db \
+                    // Create a Docker network so containers can talk (optional but recommended)
+                    sh 'docker network create test-net || true'
+
+                    // Run PostgreSQL container in detached mode on that network
+                    sh '''
+                    docker run -d --name pg-test \
+                    --network test-net \
                     -e POSTGRES_DB=intimacyTest \
-                    -e POSTGRES_USER=salimh \
-                    -e POSTGRES_PASSWORD=test123 \
-                    -p 5433:5432 \
+                    -e POSTGRES_USER=salimhassanmohamed \
+                    -e POSTGRES_PASSWORD=yourStrongPassword \
+                    -p 5432:5432 \
                     postgres:14
-                '''
+                    '''
 
-                echo '⏳ Step 2: Wait for database to be ready'
-                sh '''
-                    for i in {1..10}; do
-                    docker exec intimacy-test-db pg_isready -U salimh && break
-                    echo "Waiting for DB..."
-                    sleep 2
-                    done
-                '''
-                }
+                    // Wait for PostgreSQL to be ready (simple wait, or use a retry script)
+                    sh 'sleep 10'
 
-                echo '🧪 Step 3: Run integration tests'
-                withEnv([
-                'DB_TEST_HOST=127.0.0.1',
-                'DB_TEST_PORT=5433',
-                'DB_TEST_DATABASE=intimacyTest',
-                'DB_TEST_USER=salimh',
-                'DB_TEST_PASSWORD=test123'
-                ]) {
-                sh 'npm run test:e2e'
-                }
-            }
+                    // Run tests, passing env vars so your app connects to this DB
+                    // Replace `npm run test:e2e` with your actual test command
+                    sh '''
+                    DB_TEST_HOST=pg-test \
+                    DB_TEST_PORT=5432 \
+                    DB_TEST_DATABASE=intimacyTest \
+                    DB_TEST_USER=salimhassanmohamed \
+                    DB_TEST_PASSWORD=yourStrongPassword \
+                    npm run test:e2e
+                    '''
 
-            post {
-                always {
-                echo '🧹 Cleaning up: stopping PostgreSQL container'
-                sh 'docker stop intimacy-test-db || true'
+                    // Cleanup: stop and remove postgres container and network
+                    sh '''
+                    docker rm -f pg-test
+                    docker network rm test-net
+                    '''
                 }
             }
         }
+
 
         stage("Test coverage"){
             steps {
