--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -8,8 +8,8 @@ pipeline{
         registryCredentials = 'ecr:eu-west-3:awscreds'
         imageName = "961341553126.dkr.ecr.eu-west-3.amazonaws.com/intimacy-repository"
         intimacyRegistry = "https://961341553126.dkr.ecr.eu-west-3.amazonaws.com"
-        JWT_SECRET=testsecret
-        JWT_EXPIRATION=90d
+        JWT_SECRE T= "testsecret"
+        JWT_EXPIRATION = "90d"
     }
     stages{
         stage("Fetch code"){
