--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -10,6 +10,12 @@ pipeline{
         intimacyRegistry = "https://961341553126.dkr.ecr.eu-west-3.amazonaws.com"
         JWT_SECRET= "testsecret"
         JWT_EXPIRATION = "90d"
+
+        DB_TEST_HOST = "localhost"
+        DB_TEST_PORT = "5432"
+        DB_TEST_DATABASE = "intimacyTest"
+        DB_TEST_USER = "salimh"
+        DB_TEST_PASSWORD = "yourStrongPassword"
     }
     stages{
         stage("Fetch code"){
@@ -95,49 +101,42 @@ pipeline{
             }
         }
  */
-stage("e2e test") {
-  steps {
-    script {
-      // Remove existing container if it exists, ignore errors if not found
-      sh 'docker rm -f pg-test || true'
+        stage('Start Test DB') {
+            steps {
+                script {
+                sh 'docker rm -f pg-test || true'
+                sh 'docker network create test-net || true'
 
-      // Run new PostgreSQL container
-      sh '''
-        docker network create test-net || true
-        docker run -d --name pg-test --network test-net \
-          -e POSTGRES_DB=intimacyTest \
-          -e POSTGRES_USER=salimhassanmohamed \
-          -e POSTGRES_PASSWORD=yourStrongPassword \
-          -p 5432:5432 \
-          postgres:14
-      '''
+                sh '''
+                    docker run -d --name pg-test --network test-net \
+                    -e POSTGRES_DB=$DB_TEST_DATABASE \
+                    -e POSTGRES_USER=$DB_TEST_USER \
+                    -e POSTGRES_PASSWORD=$DB_TEST_PASSWORD \
+                    -p 5432:5432 \
+                    postgres:14
+                '''
 
-      // Optionally wait for Postgres to be ready (poll or sleep)
-      sh '''
-        for i in {1..10}; do
-          docker exec pg-test pg_isready && break
-          echo "Waiting for postgres to be ready..."
-          sleep 3
-        done
-      '''
+                // ⏳ Your elegant "wait until ready"
+                sh '''
+                    echo "⏳ Waiting for PostgreSQL to be ready..."
+                    until docker exec pg-test psql -U $DB_TEST_USER -d $DB_TEST_DATABASE -c "SELECT 1;" > /dev/null 2>&1; do
+                    echo "Still waiting..."
+                    sleep 2
+                    done
+                    echo "✅ PostgreSQL is ready."
+                '''
+                }
+            }
+        }
 
-      // Run your integration tests here with env vars pointing to the container
-      withEnv([
-        'DB_TEST_HOST=localhost',
-        'DB_TEST_PORT=5432',
-        'DB_TEST_DATABASE=intimacyTest',
-        'DB_TEST_USER=salimhassanmohamed',
-        'DB_TEST_PASSWORD=yourStrongPassword'
-      ]) {
-        sh 'npm run test:e2e' // Replace with your actual test command
-      }
-
-      // Optionally stop and remove container after tests
-      sh 'docker rm -f pg-test'
-    }
-  }
-}
-
+        stage('Run E2E Tests') {
+        steps {
+            script {
+            sh 'npm run test:e2e'
+            }
+        }
+        }
+        
 
         stage("Test coverage"){
             steps {
@@ -194,4 +193,12 @@ stage("e2e test") {
             }
         }
     }
+
+
+  post {
+    always {
+      echo "🧹 Cleaning up test database container"
+      sh 'docker rm -f pg-test || true'
+    }
+  }
 }
