--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline{
         }
         stage("Install Dependencies"){
             steps{
-                sh 'npm install'       // <--- This installs dependencies
+                sh 'npm ci'       // <--- This installs dependencies
             }
             post{
                 always{
